--- a/model.ipynb
+++ b/model.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7091d155-be77-4bd6-9ff2-fb69afa41777",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-04 11:36:21.213405: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-03-04 11:36:21.213515: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-03-04 11:36:21.214635: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-03-04 11:36:21.222233: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-03-04 11:36:22.276803: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -45,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "06aea5dc-9b37-484f-8d92-6e8e53e50eb7",
    "metadata": {},
    "outputs": [],
@@ -56,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4f7c3d17-758e-42d5-a499-d45729a8866e",
    "metadata": {},
    "outputs": [],
@@ -77,22 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ef8348b5-f952-4ed2-8d7d-8b081ca0189d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './data/raw/yes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 25\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m class_name \u001b[38;5;129;01min\u001b[39;00m classes:\n\u001b[1;32m     24\u001b[0m     class_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(raw_path, class_name)\n\u001b[0;32m---> 25\u001b[0m     images \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclass_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;66;03m# Mélanger aléatoirement les images\u001b[39;00m\n\u001b[1;32m     28\u001b[0m     random\u001b[38;5;241m.\u001b[39mshuffle(images)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data/raw/yes'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Chemin vers le répertoire racine\n",
     "root_path = \"./data/\"\n",
@@ -384,6 +359,10 @@
     "\n",
     "mlflow.set_tracking_uri(\"http://127.0.0.1:5000\")\n",
     "\n",
+    "# Set the experiment name\n",
+    "experiment_name = \"Neuroguard\"\n",
+    "mlflow.set_experiment(experiment_name)\n",
+    "\n",
     "# Entraîner le modèle avec l'augmentation de données\n",
     "with mlflow.start_run() as run:\n",
     "    history = model.fit(datagen.flow(X_train_norm, y_train, batch_size=BATCH_SIZE),\n",
@@ -572,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
